# fone-client

./: CMakeLists.txt  Makefile
src/audio/: audio.cpp  audio.h
src/core/: main.c  main.cpp
